tests/invalid/non_static_owner.stderr
error[E0597]: `owner` does not live long enough
  --> $DIR/non_static_owner.rs:9:63
   |
9  |     let c: OnceSelfCell<_, Cell<&String>> = OnceSelfCell::new(&owner);
   |                                             ------------------^^^^^^-
   |                                             |                 |
   |                                             |                 borrowed value does not live long enough
   |                                             argument requires that `owner` is borrowed for `'static`
...
17 | }
   | - `owner` dropped here while still borrowed

error[E0506]: cannot assign to `owner` because it is borrowed
  --> $DIR/non_static_owner.rs:14:5
   |
9  |     let c: OnceSelfCell<_, Cell<&String>> = OnceSelfCell::new(&owner);
   |                                             -------------------------
   |                                             |                 |
   |                                             |                 borrow of `owner` occurs here
   |                                             argument requires that `owner` is borrowed for `'static`
...
14 |     owner = Err(());
   |     ^^^^^ assignment to borrowed `owner` occurs here
